# ubic-food-management-bot-v2

./: Cargo.toml  shell.nix
src/: config.rs  error.rs  handler.rs  line_api.rs  main.rs  router.rs
src/event/: message.rs
src/line_api/: api_front.rs  authenticator.rs  error.rs  models.rs
