[package]
name = "ubic-food-management-bot-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
line_bot_sdk = { git = "https://github.com/shinbunbun/line-bot-example-rust.git" }
actix-web = "4"
actix-http = "3"
serde = { version = "1", features = ["derive"] }
env_logger="0"
log="0"
serde_json = "1.0"
awc = "3"